WalkThrough: Deploy (#626)