@@ -1,306 +1,378 @@
-# 手动部署
+# 手动部署 StarRocks
 
-## 环境准备
+本文档介绍如何手动部署 StarRocks。StarRocks 支持以二进制安装包形式手动部署于集群中。
 
-集群节点需要以下环境支持：
+如需从 [源码](https://github.com/StarRocks/starrocks) 编译安装 StarRocks，参考 [Docker 编译](../administration/Build_in_docker.md)。
 
-* Linux (Centos 7+)
-* 推荐 Oracle Java 1.8+
-* CPU 需要支持 AVX2 指令集
-* ulimit -n 配置 65535，启动脚本会自动设置，需要启动的用户有设置 ulimit -n 权限
-* 集群时钟需同步
-* 网络需要万兆网卡和万兆交换机
+以下示例仅部署一台 FE 节点以及一台 BE 节点。在正常应用环境中，一个 StarRocks 集群需要部署三个 BE 节点。
 
-通过 `cat /proc/cpuinfo |grep avx2` 命令查看节点配置，有结果则 cpu 支持 AVX2 指令集。
+如需在生产环境中扩容，参考 [扩容缩容](../administration/Scale_up_down.md)。
 
-测试集群建议节点配置：BE 推荐 16 核 64GB 以上，FE 推荐 8 核 16GB 以上。建议 FE，BE 独立部署。
+## 前提条件
 
-系统参数配置建议：
+在部署 StarRocks 之前，请确保如下环境要求已满足。
+|需求种类|需求细节|说明|
+|-----------|------------|------|
+|硬件需求|<ul><li>集群至少拥有两台物理或虚拟节点。</li><li>BE 节点 CPU 需支持 AVX2 指令集。</li><li>各节点间需要通过万兆网卡及万兆交换机连接。</li></ul>|<ul><li>FE 节点建议配置 8 核 或以上 CPU，16GB 或以上内存。</li> <li>BE 节点建议配置 16 核 或以上 CPU，64GB 或以上内存。</li><li>通过运行 <code>cat /proc/cpuinfo \|grep avx2</code> 命令查看节点 CPU 支持的指令集，若有结果返回则表明 CPU 支持 AVX2 指令集。</li></ul>|
+|操作系统|所有节点操作系统需为 CentOS（7 或以上）。| |
+|软件需求|所有节点需安装：<ul><li><a   href="https://www.oracle.com/java/technologies/downloads/">Oracle Java</a>（1.8 或以上）</li><li><a href="https://www.mysql.com/downloads/">MySQL 客户端</a>（5.5 或以上） </li></ul>|  |
+|系统环境|<ul><li>集群时钟需保持同步。 </li> <li> 用户需要有设置 <code>ulimit -n</code> 权限。 </li> </ul> | |
 
-关闭交换区，消除交换内存到虚拟内存时对性能的扰动。
+其他系统参数配置：
+
+* 建议关闭交换区，消除交换内存到虚拟内存时对性能的扰动。
 
 ```shell
 echo 0 | sudo tee /proc/sys/vm/swappiness
 ```
 
-建议使用 Overcommit，把 cat /proc/sys/vm/overcommit_memory 设成  1。
+* 建议使用 Overcommit，将 `cat /proc/sys/vm/overcommit_memory` 设置为 `1`。
 
 ```shell
 echo 1 | sudo tee /proc/sys/vm/overcommit_memory
 ```
 
-## 下载 StarRocks
+## 部署 FE 节点
 
-可以通过 [StarRocks 官网下载](https://www.starrocks.com/zh-CN/download) 获取二进制产品包。
+本小节介绍如何配置部署 Frontend (FE) 节点。FE 是StarRocks的前端节点，负责管理元数据，管理客户端连接，进行查询规划，查询调度等工作。
 
-下载的安装包可直接解压后进行安装部署，如有 [下载源码](https://github.com/StarRocks/starrocks) 并编译安装包的需求，可以使用 [Docker 进行编译](../administration/Build_in_docker.md)。
+### 下载并解压安装包
 
-将 StarRocks 的二进制产品包分发到目标主机的部署路径并解压，可以考虑使用新建的 StarRocks 用户来管理。
+[下载](https://www.starrocks.com/zh-CN/download) StarRocks 并解压二进制安装包。
 
-以下载产品包为 starrocks-1.0.0.tar.gz 为例， 解压(tar -xzvf starrocks-1.0.0.tar.gz)后文件目录结构如下:
+```bash
+tar -xzvf StarRocks-x.x.x.tar.gz
+```
+
+> 注意：将以上文件名修改为下载的二进制安装包名。
+
+### 配置 FE 节点
+
+进入 **StarRocks-x.x.x/fe** 路径。
+
+```bash
+cd StarRocks-x.x.x/fe
+```
+
+> 注意：将以上路径名修改为解压后的路径名。
+
+修改 FE 配置文件 **conf/fe.conf**。以下示例仅添加元数据目录和 Java 目录，以保证部署成功。如需在生产环境中对集群进行详细优化配置，参考 [FE 参数配置](../administration/Configuration.md#FE-配置项)。
+
+> 注意：当一台机器拥有多个 IP 地址时，需要在 FE 配置文件 **conf/fe.conf** 中设置 `priority_networks`，为该节点设定唯一 IP。
+
+添加元数据目录。
 
 ```Plain Text
-StarRocks-XX-1.0.0
-├── be  # BE目录
-│   ├── bin
-│   │   ├── start_be.sh     # BE启动脚本
-│   │   └── stop_be.sh      # BE关闭脚本
-│   ├── conf
-│   │   └── be.conf         # BE配置文件
-│   ├── lib
-│   │   ├── starrocks_be    # BE可执行文件
-│   │   └── meta_tool
-│   └── www
-├── fe  # FE目录
-│   ├── bin
-│   │   ├── start_fe.sh       # FE启动脚本
-│   │   └── stop_fe.sh        # FE关闭脚本
-│   ├── conf
-│   │   └── fe.conf           # FE配置文件
-│   ├── lib
-│   │   ├── starrocks-fe.jar  # FE jar包
-│   │   └── *.jar             # FE 依赖的jar包
-│   └── webroot
-└── udf
-```
-
-## 部署 FE
-
-### FE 的基本配置
-
-FE 的配置文件为 StarRocks-XX-1.0.0/fe/conf/fe.conf， 此处仅列出其中 JVM 配置和元数据目录配置，生产环境可参考 [FE 参数配置](../administration/Configuration.md#FE配置项) 对集群进行详细优化配置。
-
-### FE 单实例部署
-
-```bash
-cd StarRocks-XX-1.0.0/fe
-```
-
-第一步: 配置文件 conf/fe.conf：
-
-```bash
-# 元数据目录
 meta_dir = ${STARROCKS_HOME}/meta
-# JVM配置
-JAVA_OPTS = "-Xmx8192m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:$STARROCKS_HOME/log/fe.gc.log"
 ```
 
-可以根据 FE 内存大小调整-Xmx8192m，为了避免 GC 建议 16G 以上，StarRocks 的元数据都在内存中保存。
-<br/>
+添加 Java 目录。
 
-第二步: 创建元数据目录，需要与 fe.conf 中配置路径保持一致:
+```Plain Text
+JAVA_HOME = /path/to/your/java
+```
+
+> 注意：将以上路径修改为 Java 所在的本地路径。
+
+### 创建元数据路径
+
+创建 FE 节点中的元数据路径 **meta**。
 
 ```bash
-mkdir -p meta 
+mkdir -p meta
 ```
 
-第三步: 启动 FE 进程:
+> 注意：该路径需要与 **conf/fe.conf** 文件中配置路径保持一致。
+
+### 启动 FE 节点
+
+运行以下命令启动 FE 节点。
 
 ```bash
 bin/start_fe.sh --daemon
 ```
 
-第四步: 确认启动 FE 启动成功。
+### 确认 FE 启动成功
 
-* 查看日志 log/fe.log 确认。
+通过以下方式验证 FE 节点是否启动成功：
+
+* 通过查看日志 **log/fe.log** 确认 FE 是否启动成功。
 
 ```Plain Text
-2020-03-16 20:32:14,686 INFO 1 [FeServer.start():46] thrift server started.
-2020-03-16 20:32:14,696 INFO 1 [NMysqlServer.start():71] Open mysql server success on 9030
+2020-03-16 20:32:14,686 INFO 1 [FeServer.start():46] thrift server started.  // FE 节点启动成功。
+2020-03-16 20:32:14,696 INFO 1 [NMysqlServer.start():71] Open mysql server success on 9030  // 可以使用 MySQL 客户端通过 `9030` 端口连接 FE。
 2020-03-16 20:32:14,696 INFO 1 [QeService.start():60] QE service start.
 2020-03-16 20:32:14,825 INFO 76 [HttpServer$HttpServerThread.run():210] HttpServer started with port 8030
 ...
 ```
 
-* 如果 FE 启动失败，可能是由于端口号被占用，可修改配置文件 conf/fe.conf 中的端口号 http_port。
-* 使用 jps 命令查看 java 进程确认 "StarRocksFe" 存在。
-* 使用浏览器访问 `FE ip:http_port`（默认 8030），打开 StarRocks 的 WebUI， 用户名为 root， 密码为空。
+* 通过运行 `jps` 命令查看 Java 进程，确认 **StarRocksFe** 进程是否存在。
+* 通过在浏览器访问 `FE ip:http_port`（默认 `http_port` 为 `8030`），进入 StarRocks 的 WebUI，用户名为 `root`，密码为空。
 
-### 使用 MySQL 客户端访问 FE
+> 说明：如果由于端口被占用导致 FE 启动失败，可修改配置文件 **conf/fe.conf** 中的端口号 `http_port`。
 
-StarRocks 可通过 Mysql 客户端进行连接，使用 Add/Drop 命令添加/删除 fe/be 节点，实现对集群的 [扩容/缩容](../administration/Scale_up_down.md) 操作。
+### 添加 FE 节点
 
-第一步: 安装 mysql 客户端，版本建议 5.5+(如果已经安装，可忽略此步)：
+您可通过 MySQL 客户端连接 StarRocks 以添加 FE 节点。
 
-```shell
-Ubuntu：sudo apt-get install mysql-client
-Centos：sudo yum install mysql-client
-```
+在 FE 进程启动后，使用 MySQL 客户端连接 FE 实例。
 
-第二步: FE 进程启动后，使用 mysql 客户端连接 FE 实例：
-
-```sql
+```bash
 mysql -h 127.0.0.1 -P9030 -uroot
 ```
 
-注意：这里默认 root 用户密码为空，端口为 fe/conf/fe.conf 中的 query\_port 配置项，默认为 9030
+> 说明：`root` 为 StarRocks 默认内置 user，密码为空，端口为 **fe/conf/fe.conf** 中的 `query\_port` 配置项，默认值为 `9030`。
 
-第三步: 查看 FE 状态：
+查看 FE 状态。
 
 ```Plain Text
-mysql> SHOW PROC '/frontends'\G
+MySQL [(none)]> SHOW PROC '/frontends'\G
 
-************************* 1. row ************************
-             Name: 172.16.139.11_9010_1594200991015
-               IP: 172.16.139.11
-         HostName: starrocks-sandbox01
+*************************** 1. row ***************************
+             Name: 172.26.xxx.xx_9010_1652926508967
+               IP: 172.26.xxx.xx
+         HostName: iZ8vb61k11tstgnvrmrdfdZ
       EditLogPort: 9010
          HttpPort: 8030
         QueryPort: 9030
           RpcPort: 9020
              Role: FOLLOWER
          IsMaster: true
-        ClusterId: 861797858
+        ClusterId: 1160043595
              Join: true
             Alive: true
-ReplayedJournalId: 64
-    LastHeartbeat: 2020-03-23 20:15:07
+ReplayedJournalId: 1303
+    LastHeartbeat: 2022-05-19 11:27:16
          IsHelper: true
            ErrMsg:
-1 row in set (0.03 sec)
+        StartTime: 2022-05-19 10:15:21
+          Version: 2.2.0-RC02-2ab1482
+1 row in set (0.02 sec)
 ```
 
-**Role** 为 **FOLLOWER** 说明这是一个能参与选主的 FE；
+* 当 **Role** 为 **FOLLOWER** 时，当前节点是一个能参与选主的 FE 节点。
+* 当 **IsMaster** 为 **true** 时，当前 FE 节点为主节点。
 
-**IsMaster** 为 **true**，说明该 FE 当前为主节点。
+如果 MySQL 客户端连接失败，可以通过查看 **log/fe.warn.log** 日志文件发现问题。
 
-如果 MySQL 客户端连接不成功，请查看 log/fe.warn.log 日志文件，确认问题。由于是初次启动，如果在操作过程中遇到任何意外问题，都可以删除并重新创建 FE 的元数据目录，再从头开始操作。
+如果在**初次部署时**遇到任何意外问题，可以在删除并重新创建 FE 的元数据路径后，重新开始部署。
+
+### 部署 FE 节点的高可用集群
+
+StarRocks 的 FE 节点支持 HA 模型部署，以保证集群的高可用。详细设置方式参考 [FE 高可用集群部署](/administration/Deployment.md#fe高可用部署)。
+
+### 停止 FE 节点
+
+运行以下命令停止 FE 节点。
+
+```bash
+./bin/stop_fe.sh --daemon
+```
+
 <br/>
 
-## 部署 BE
+## 部署 BE 节点
 
-### BE 的基本配置
+本小节介绍如何配置部署 Backend (BE) 节点。BE 是StarRocks的后端节点，负责数据存储以及SQL执行等工作。以下例子仅部署一个 BE 节点。您可以通过重复以下步骤添加多个 BE 节点。
 
-BE 的配置文件为 StarRocks-XX-1.0.0/be/conf/be.conf，默认配置即可启动集群，生产环境可参考 [BE 参数配置](../administration/Configuration.md#be-%E9%85%8D%E7%BD%AE%E9%A1%B9) 对集群进行详细优化配置。
+### 下载并解压安装包
 
-### BE 部署
+[下载](https://www.starrocks.com/zh-CN/download) StarRocks 并解压二进制安装包。
 
-通过以下命令启动 be 并添加 be 到 StarRocks 集群， 一般至少在三个节点部署 3 个 BE 实例， 每个实例的添加步骤相同。
+```bash
+tar -xzvf StarRocks-x.x.x.tar.gz
+```
 
-第一步: 创建数据目录（当前设置为 be.conf 中默认 storage_root_path 配置项路径）：
+> 注意：将以上文件名修改为下载的二进制安装包名。
 
-```shell
-# 进入be的安装目录
-cd StarRocks-XX-1.0.0/be
-# 创建数据存储目录
+### 配置 BE 节点
+
+进入 **StarRocks-x.x.x/be** 路径。
+
+```bash
+cd StarRocks-x.x.x/be
+```
+
+> 注意：将以上路径名修改为解压后的路径名。
+
+修改 BE 节点配置文件 **conf/be.conf**。因默认配置即可启动集群，以下示例并未修改 BE 节点配置。如需在生产环境中对集群进行详细优化配置，参考 [BE 参数配置](../administration/Configuration.md#BE-参数配置)。
+
+### 创建数据路径
+
+创建 BE 节点中的数据路径 **storage**。
+
+```bash
 mkdir -p storage
 ```
 
-第二步: 通过 mysql 客户端添加 BE 节点：
+> 注意：该路径需要与 **be.conf** 文件中配置路径保持一致。
 
-* host 为与 priority_networks 设置相匹配的 IP，port 为 BE 配置文件中的 heartbeat_service_port，默认为 9050。
+### 添加 BE 节点
+
+通过 MySQL 客户端将 BE 节点添加至 StarRocks 集群。
 
 ```sql
 mysql> ALTER SYSTEM ADD BACKEND "host:port";
 ```
 
-如出现错误，需要删除 BE 节点，可通过以下命令将 BE 节点从集群移除，host 和 port 与添加时一致：
+> 注意：`host` 需要与 `priority_networks` 相匹配，`port` 需要与 **be.conf** 文件中的设置的 `heartbeat_service_port` 相同，默认为 `9050`。
+
+如添加过程出现错误，需要通过以下命令将该 BE 节点从集群移除。
 
 ```sql
 mysql> ALTER SYSTEM decommission BACKEND "host:port";
 ```
 
-具体参考 [扩容缩容](../administration/Scale_up_down.md#be%E6%89%A9%E7%BC%A9%E5%AE%B9)。
+> `host` 和 `port` 与添加的 BE 节点一致。
 
-第三步: 启动 BE：
+### 启动 BE 节点
+
+运行以下命令启动 BE 节点。
 
 ```shell
 bin/start_be.sh --daemon
 ```
 
-第四步: 查看 BE 状态, 确认 BE 就绪:
+### 确认 BE 启动成功
+
+通过 MySQL 客户端确认 BE 节点是否启动成功。
 
 ```Plain Text
-mysql> SHOW PROC '/backends'\G
+MySQL [(none)]> SHOW PROC '/backends'\G
 
-********************* 1. row **********************
-            BackendId: 10002
+*************************** 1. row ***************************
+            BackendId: 10003
               Cluster: default_cluster
-                   IP: 172.16.139.11
-             HostName: starrocks-sandbox01
+                   IP: 172.26.xxx.xx
+             HostName: sandbox-pdtw02
         HeartbeatPort: 9050
                BePort: 9060
              HttpPort: 8040
              BrpcPort: 8060
-        LastStartTime: 2020-03-23 20:19:07
-        LastHeartbeat: 2020-03-23 20:34:49
+        LastStartTime: 2022-05-19 11:15:00
+        LastHeartbeat: 2022-05-19 11:27:36
                 Alive: true
  SystemDecommissioned: false
 ClusterDecommissioned: false
-            TabletNum: 0
+            TabletNum: 10
      DataUsedCapacity: .000
-        AvailCapacity: 327.292 GB
-        TotalCapacity: 450.905 GB
-              UsedPct: 27.41 %
-       MaxDiskUsedPct: 27.41 %
+        AvailCapacity: 1.865 TB
+        TotalCapacity: 1.968 TB
+              UsedPct: 5.23 %
+       MaxDiskUsedPct: 5.23 %
                ErrMsg:
-              Version:
+              Version: 2.2.0-RC02-2ab1482
+               Status: {"lastSuccessReportTabletsTime":"2022-05-19 11:27:01"}
+    DataTotalCapacity: 1.865 TB
+          DataUsedPct: 0.00 %
 1 row in set (0.01 sec)
 ```
 
-<br/>
+当 `isAlive` 为 `true` 时，当前 BE 节点正常接入集群。
 
-如果 isAlive 为 true，则说明 BE 正常接入集群。如果 BE 没有正常接入集群，请查看 log 目录下的 be.WARNING 日志文件确定原因。
+如果 BE 节点没有正常接入集群，可以通过查看 **log/be.WARNING** 日志文件排查问题。
 
-如果日志中出现类似以下的信息，说明 priority_networks 的配置存在问题。
+如果日志中出现类似以下的信息，说明 `priority_networks` 的配置存在问题。
 
 ```Plain Text
-W0708 17:16:27.308156 11473 heartbeat_server.cpp:82\] backend ip saved in master does not equal to backend local ip127.0.0.1 vs. 172.16.179.26
+W0708 17:16:27.308156 11473 heartbeat_server.cpp:82\] backend ip saved in master does not equal to backend local ip127.0.0.1 vs. 172.16.xxx.xx
 ```
 
-此时需要，先用以下命令 drop 掉原来加进去的 be，然后重新以正确的 IP 添加 BE。
+如遇到以上问题，可以通过 DROP 错误的 BE 节点，然后重新以正确的 IP 添加 BE 节点的方式来解决。
 
 ```sql
-MySQL> ALTER SYSTEM DROPP BACKEND "172.16.139.11:9050";
+MySQL> ALTER SYSTEM DROP BACKEND "172.16.xxx.xx:9050";
 ```
 
-由于是初次启动，如果在操作过程中遇到任何意外问题，都可以删除并重新创建 storage 目录，再从头开始操作。
+如果在**初次部署时**遇到任何意外问题，可以在删除并重新创建 BE 的数据路径后，重新开始部署。
 
-## 部署 Broker
+### 停止 BE 节点
 
-配置文件为 apache_hdfs_broker/conf/apache_hdfs_broker.conf
+运行以下命令停止 BE 节点。
 
-> 注意：Broker 没有也不需要 priority_networks 参数，Broker 的服务默认绑定在 0.0.0.0 上，只需要在 ADD BROKER 时，填写正确可访问的 Broker IP 即可。
+```bash
+./bin/stop_be.sh --daemon
+```
 
-如果有特殊的 hdfs 配置，复制线上的 hdfs-site.xml 到 conf 目录下
+<br/>
 
-启动 broker：
+## 部署 Broker 节点
 
-```shell
+本小节介绍如何配置部署 Broker。通过部署的 Broker，StarRocks 可读取对应数据源（如HDFS、S3）上的数据，利用自身的计算资源对数据进行预处理和导入。除此之外，Broker 也被应用于数据导出，备份恢复等功能。
+
+### 下载并解压安装包
+
+[下载](https://www.starrocks.com/zh-CN/download) StarRocks 并解压二进制安装包。
+
+```bash
+tar -xzvf StarRocks-x.x.x.tar.gz
+```
+
+> 注意：将以上文件名修改为下载的二进制安装包名。
+
+### 配置 Broker 节点
+
+进入 **StarRocks-x.x.x/apache_hdfs_broker** 路径。
+
+```bash
+cd StarRocks-x.x.x/apache_hdfs_broker
+```
+
+> 注意：将以上路径名修改为解压后的路径名。
+
+修改 Broker 节点配置文件 **conf/apache_hdfs_broker.conf**。因默认配置即可启动集群，以下示例并未修改 Broker 点配置。您可以直接复制自己的 HDFS 集群配置文件并粘贴至 **conf** 路径下。
+
+### 启动 Broker 节点
+
+通过以下命令启动 Broker。
+
+```bash
 ./apache_hdfs_broker/bin/start_broker.sh --daemon
 ```
 
-添加 broker 节点到集群中：
+### 添加 Broker 节点
+
+您可通过 MySQL 客户端连接 StarRocks 以添加或删除 Broker 节点。
 
 ```sql
-MySQL> ALTER SYSTEM ADD BROKER broker1 "172.16.139.11:8000";
+MySQL> ALTER SYSTEM ADD BROKER broker1 "172.16.xxx.xx:8000";
 ```
 
-查看 broker 状态：
+> 说明：默认配置中，Broker 节点的端口为 8000。
+
+### 确认 Broker 启动成功
+
+通过 MySQL 客户端确认 Broker 节点是否启动成功。
 
 ```plain text
-MySQL> SHOW PROC "/brokers"\G
+MySQL [(none)]> SHOW PROC "/brokers"\G
+
 *************************** 1. row ***************************
           Name: broker1
-            IP: 172.16.139.11
+            IP: 172.26.xxx.xx
           Port: 8000
          Alive: true
- LastStartTime: 2020-04-01 19:08:35
-LastUpdateTime: 2020-04-01 19:08:45
-        ErrMsg: 
+ LastStartTime: 2022-05-19 11:21:36
+LastUpdateTime: 2022-05-19 11:28:31
+        ErrMsg:
 1 row in set (0.00 sec)
 ```
 
-Alive 为 true 代表状态正常。
+当 `Alive` 为 `true` 时，当前 Broker 节点正常接入集群。
+
+### 停止 Broker 节点
+
+运行以下命令停止 Broker 节点。
+
+```bash
+./bin/stop_broker.sh --daemon
+```
 
 <br/>
 
-## 扩展内容
+## 下一步
 
-### FE 的高可用集群部署
+成功部署 StarRocks 集群后，您可以：
 
-StarRocks FE 支持 HA 模型部署，保证集群的高可用，详细设置方式请参考 [FE 高可用集群部署](/administration/Deployment.md#fe高可用部署)。
-
-### 集群升级
-
-StarRocks 支持平滑升级，并支持回滚（1.18.2 及以后的版本无法回滚到其之前的版本），详细操作步骤请参考 [集群升级](../administration/Cluster_administration.md#集群升级)。
+* [创建表](Create_table.md)
+* [升级集群](../administration/Cluster_administration.md#集群升级)
